tests/testcases/valid/control_flow/11_for_loops_break_continue.ciel
// For loops with break and continue

int main() {
    int sum = 0;
    
    // Test 1: For loop with break
    for (int i = 0; i < 100; i = i + 1) {
        if (i == 10) {
            break;
        }
        sum = sum + 1;
    }
    
    // Test 2: For loop with continue
    for (int i = 0; i < 10; i = i + 1) {
        if (i == 5) {
            continue;
        }
        sum = sum + 1;
    }
    
    // Test 3: For loop with multiple continues
    for (int i = 0; i < 10; i = i + 1) {
        if (i < 3) {
            continue;
        }
        if (i > 7) {
            continue;
        }
        sum = sum + 1;
    }
    
    return 0;
}
